修复回放 V2 健康未知边界